<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">

            <EditText
                android:id="@+id/new_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_contact_name" />

            <EditText
                android:id="@+id/new_contact_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_contact_last_name" />

            <EditText
                android:id="@+id/new_contact_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_contact_nickname" />

        </LinearLayout>

        <ImageView
            android:id="@+id/new_contact_image"
            android:src="@drawable/ic_contact_picture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_contact_image"
            android:layout_weight="1" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_take_picture"
        android:id="@+id/button_take_picture" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_delete_contact"
                android:id="@+id/button_delete_contact" />

            <Button
                android:id="@+id/button_new_contact_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_contact_save"
                android:enabled="false" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
